# online-stereo-calibration

./: CMakeLists.txt  README.md
conf/: stereocalib.ini  stereocalib_icubSIM.ini
data/: stereocalib.ini
include/encoders/: encodersBase_icub.h
include/features/: featuresSIFT.h
include/filter/: Kinematics.h  calibrationStereoCameras.h
include/iCub/encoders/: encodersBase.h  encodersBase_icub.h
include/iCub/filter/: EKF.h  VisualOdometry_Base.h
include/iCub/images/: imagesBase.h
include/iCub/threads/: disparityThread.h  stereoCalibModule.h  stereoCalibThread.h  worldPointThread.h
include/images/: imageDisparity.h
include/threads/: disparityThread.h  stereoCalibModule.h  stereoCalibThread.h  worldPointThread.h
scripts/: yarpConnections.sh  yarpConnections_icubSIM.sh
src/: main.cpp
src/encoders/: encodersBase_icub.cpp
src/features/: featuresSIFT.cpp
src/filter/: EKF.cpp  EKFBase.cpp  Jacobians.cpp  Kinematics.cpp  Rodrigues.cpp  VisualOdometry_Base.cpp  calibrationStereoCameras.cpp
src/images/: imageDisparity.cpp  imagesBase.cpp
src/threads/: disparityThread.cpp  stereoCalibModule.cpp  stereoCalibThread.cpp  worldPointThread.cpp
